plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.3'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'de.harich.thilo'
version = '1.0-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(24)
    }
}

sourceSets {
    perf {
        compileClasspath += sourceSets.main.output + sourceSets.test.output
        runtimeClasspath += sourceSets.main.output + sourceSets.test.output
        java {
            srcDirs = ['src/perf/java']
        }
    }
}


repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.11.4'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.11.4'
}

// Ermöglicht die Nutzung der Vector-API für AVX-512
tasks.withType(JavaCompile).configureEach {
//    options.compilerArgs << "--add-modules=jdk.incubator.vector"
}

tasks.withType(JavaExec).configureEach {
//    jvmArgs += ["--add-modules=jdk.incubator.vector"]
}

test {
    useJUnitPlatform()
    // Die Test-Worker-Prozesse von Gradle brauchen das Modul ebenfalls
//    jvmArgs += ["--add-modules", "jdk.incubator.vector"]
}